# google-adk-impl

./: .env.temp  .gitignore  README.md  pyproject.toml  sitecustomize.py
core/: __init__.py
core/utils/: __init__.py  adk_config.py  adk_tool_guard.py  crewai_agent.py  dotenv.py  langgraph_agent.py  litellm_config.py  llm_json.py  math_render.py  observability.py  skill_loader.py
non_skill_impl/adk_agent/: adk_fix.py  app.py  cli.py  main.py
non_skill_impl/adk_agent/agents/: __init__.py
non_skill_impl/adk_agent/agents/multi_agent/: __init__.py
non_skill_impl/adk_agent/agents/multi_agent/math_agent/: __init__.py  (+3 more)
non_skill_impl/adk_agent/agents/unified_agent/: __init__.py  agent.py  main.py
non_skill_impl/adk_agent/skills/: __init__.py
non_skill_impl/adk_agent/skills/math/: __init__.py  skill.md
non_skill_impl/adk_agent/skills/orchestrator/: __init__.py  skill.md
non_skill_impl/adk_agent/skills/web_search/: __init__.py  skill.md
non_skill_impl/adk_agent/utils/: __init__.py  eval_utils.py  runner_utils.py
skill_impl/adk_agent_skills_primitive/: app.py  cli.py  main.py  model_bundle.py  native_skills.py  paths.py  toolsets.py
skill_impl/adk_agent_skills_primitive/agents/orchestrator/: __init__.py  agent.py  builder.py  constants.py  main.py  runner.py
skill_impl/adk_agent_skills_primitive/native_skills/math/: SKILL.md
skill_impl/adk_agent_skills_primitive/native_skills/web-search/: SKILL.md
tests/: test_adk_agent_skills_primitive.py  test_adk_runner_utils.py  test_math_tools.py  test_native_skill_toolset_integration.py  test_web_search_tool.py
(+22 files in other folders)
